# MemoryX

./: Dockerfile.api  NOTICE  README.md  nginx-hybrid.conf  setup.py  test_model2vec_speed.py  test_optimized_search.py  test_performance.py
api/: README.md  check_all.py  check_facts.py  check_judgment.py  check_qdrant.py  cleanup_test_data.py  generate_openapi.py  requirements.txt  test_batch.py  test_delete.sh  test_duplicate.sh  test_large_text.py  test_large_text.sh  test_multilingual.py  test_search.sh  test_search_batch.py  test_update.sh  test_update2.sh
deploy/: ARCHITECTURE.md  README.md  install-docker.sh  install.sh
memoryx/: __init__.py  client.py
openclaw-hook/: .gitignore  HOOK.md  index.ts  package.json  tsconfig.json
private-deploy-template/: README.md
sdk/: LICENSE  pyproject.toml  setup.py
sdk/.github/workflows/: publish.yml
sdk/memoryx/: __init__.py  client.py
sdk/nodejs/: .npmignore  README.md  package-lock.json  package.json  test.ts  test_4points.ts  test_add.ts  test_core.ts  test_deep.ts  test_direct.ts  test_failure.ts  test_no_celery.ts  test_retry.ts  test_retry_real.ts  test_rounds.ts  test_search.ts  test_summary.ts  test_token_idle.ts
sdk/nodejs/src/: client.ts  index.ts  queue.ts  storage.ts  types.ts
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/src/: __init__.py  client.py
skills/: install.sh
static/: agent-register-guide.html  index.html  install-vscode.sh  openmemoryx-landing.html  privacy.html  sdk-guide.html  terms.html
t0ken_memoryx.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+99 files in other folders)
